--- a/QuizRaq/res/layout/activity_resultado.xml
+++ b/QuizRaq/res/layout/activity_resultado.xml
@@ -9,8 +9,12 @@
     tools:context=".ResultadoActivity" >
 
     <TextView
+        android:id="@+id/textResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="186dp"
+        android:text="@string/resultado" />
 
 </RelativeLayout>
