inclusão da quinta questão

--- a/QuizRaq/res/layout/activity_resultado.xml
+++ b/QuizRaq/res/layout/activity_resultado.xml
@@ -17,4 +17,13 @@
         android:layout_marginTop="186dp"
         android:text="@string/resultado" />
 
+    <Button
+        android:id="@+id/buttonJogNov"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="59dp"
+        android:text="@string/jogaNovamente" />
+
 </RelativeLayout>
