--- a/QuizRaq/res/layout/activity_main.xml
+++ b/QuizRaq/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:id="@+id/radio1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="@string/opt1" />
 
         <RadioButton
