--- a/QuizRaq/res/layout/activity_quarta.xml
+++ b/QuizRaq/res/layout/activity_quarta.xml
@@ -36,7 +36,7 @@
             android:id="@+id/radio1Act4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="@string/opt1Act4" />
 
         <RadioButton
