--- a/QuizRaq/res/layout/activity_segunda.xml
+++ b/QuizRaq/res/layout/activity_segunda.xml
@@ -35,7 +35,7 @@
             android:id="@+id/radio1Act2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="true"
             android:text="@string/opt1Act2" />
 
         <RadioButton
