--- a/QuizRaq/res/layout/activity_resultado.xml
+++ b/QuizRaq/res/layout/activity_resultado.xml
@@ -21,9 +21,19 @@
         android:id="@+id/buttonJogNov"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textResult"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="59dp"
+        android:layout_marginTop="51dp"
         android:text="@string/jogaNovamente" />
+
+    <Button
+        android:id="@+id/buttonSair"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonJogNov"
+        android:layout_alignRight="@+id/buttonJogNov"
+        android:layout_below="@+id/buttonJogNov"
+        android:layout_marginTop="24dp"
+        android:text="@string/sair" />
 
 </RelativeLayout>
