--- a/QuizRaq/res/layout/activity_segunda.xml
+++ b/QuizRaq/res/layout/activity_segunda.xml
@@ -62,8 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioGroup2"
-        android:layout_marginTop="22dp"
-        android:layout_toRightOf="@+id/radioGroup2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp"
         android:text="@string/confAct2" />
 
 </RelativeLayout>
