--- a/QuizRaq/res/layout/activity_terceira.xml
+++ b/QuizRaq/res/layout/activity_terceira.xml
@@ -65,10 +65,9 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/radioGroup3"
-        android:layout_marginLeft="49dp"
-        android:layout_marginTop="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp"
         android:text="@string/confAct3" />
 
 </RelativeLayout>
